k8s/infra-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-app-service
  namespace: stage
spec:
  selector:
    app: infra-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
